@@ -1,3 +1,9 @@
+2017-09-21  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/71351
+	* gfortran.dg/graphite/pr71351.f90: New testcase.
+	* gfortran.dg/graphite/interchange-3.f90: Adjust.
+
 2017-09-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/82260
